--- a/.env
+++ b/.env
@@ -5,23 +5,11 @@ NODE_ENV=development
 
 MONGO_URI = mongodb://localhost:27017/
 
+
 ## Server ##
 PORT=3000
 HOST=localhost
 
-
-## Setup jet-logger ##
-JET_LOGGER_MODE=CONSOLE
-JET_LOGGER_FILEPATH=jet-logger.log
-JET_LOGGER_TIMESTAMP=TRUE
-JET_LOGGER_FORMAT=LINE
-
-
-## Authentication ##
-COOKIE_DOMAIN=localhost
-COOKIE_PATH=/
-SECURE_COOKIE=true
-JWT_SECRET=xxxxxxxxxxxxxx
-COOKIE_SECRET=xxxxxxxxxxxxxx
-# expirt after 30 days
+# Cookie
 COOKIE_EXP=25920000000
+COOKIE_SECRET= Tnmda5FsSvpwR3NEHe6U4CMAQ8Vzc97u
