--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "identity-service",
+  "name": "social-media-backend",
   "version": "0.0.0",
   "scripts": {
     "build": "npx ts-node build.ts",
@@ -27,33 +27,24 @@
     "node": ">=8.10.0"
   },
   "dependencies": {
-    "@types/connect-mongodb-session": "^2.4.7",
     "bcrypt": "^5.1.1",
     "connect-mongodb-session": "^5.0.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-async-errors": "^3.1.1",
     "express-session": "^1.18.0",
     "helmet": "^7.1.0",
-    "identity-service": "file:",
-    "inserturlparams": "^1.1.2",
-    "jet-logger": "^1.3.1",
-    "jet-paths": "^1.0.6",
-    "jet-validator": "^1.1.1",
-    "jsonfile": "^6.1.0",
-    "module-alias": "^2.2.3",
-    "moment": "^2.30.1",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "ts-command-line-args": "^2.5.1"
+    "social-media-backend": "file:"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/connect-mongodb-session": "^2.4.7",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
