--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.2",
+    "@types/swagger-jsdoc": "^6.0.4",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
     "@typescript-eslint/parser": "^7.17.0",
     "eslint": "^8.57.0",
@@ -70,6 +71,7 @@
     "jasmine": "^5.2.0",
     "nodemon": "^3.1.4",
     "supertest": "^7.0.0",
+    "swagger-jsdoc": "^6.2.8",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.5.4"
